fix(): z-index issue in search buttons for table

--- a/src/components/MuComponents/TableTop/TableTop.module.css
+++ b/src/components/MuComponents/TableTop/TableTop.module.css
@@ -104,10 +104,12 @@
 	font-size: 1.5rem;
 	cursor: pointer;
 	margin: 0;
+	z-index: 10;
 }
 
 .searchIcon {
 	font-size: 1.7rem;
 	margin: 0;
 	cursor: pointer;
+	z-index: 10;
 }
